--- a/platformio.ini
+++ b/platformio.ini
@@ -4,3 +4,4 @@ board = seeed_xiao_esp32c3
 framework = arduino
 lib_deps = 
     waspinator/AccelStepper@^1.64
+    bolderflight/Bolder Flight Systems SBUS@^8.1.4
